fixed align issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  align: flex-start;
+  align-items: flex-start;
 }
 
 .hero-cta {
